--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,14 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>24.1-jre</version>
+
+
+        </dependency>
     </dependencies>
     <build>
         <plugins>
